assets/infrastructure/manifests/cfk/basic/kafka-bootstrap-local-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    type: kafka-bootstrap-local
  name: kafka-bootstrap-local
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - name: local
    port: 9096
    protocol: TCP
    targetPort: 9096
  publishNotReadyAddresses: true
  selector:
    app: kafka
    confluent-platform: "true"
    type: kafka
