assets/infrastructure/manifests/cfk/basic/cmf-HTTPRoute.yaml
# HTTPRoute terminates TLS on Envoy and forwards to Vault
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flink
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "flink.${BASE_PUBLIC_HTTPS_DOMAIN}"
  rules:
  - backendRefs:
    - name: cmf
      # CMF currently only has an http listener
      port: 80
