assets/infrastructure/manifests/cfk/basic/controlcenter-TLSRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: controlcenter
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
  hostnames:
  - "confluent.${BASE_EXT_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: controlcenter-0-internal
      port: 9021  # The port on your pod where TLS is terminated
