assets/infrastructure/manifests/cfk/basic/controlcenter-ingress.yaml
--- # Ingress for controlcenter
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlcenter
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - "*.${BASE_DOMAIN}"
  ingressClassName: nginx
  rules:
  - host: confluent.${BASE_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Cannot be headless
            name: controlcenter-0-internal
            port:
              number: 9021
