assets/infrastructure/manifests/cfk/basic/kafka-1-local-TLSRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kafka-1-local
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: tls-passthrough-local
  hostnames:
  - "kafka-1.${BASE_LOCAL_TLS_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: kafka-1-internal
      port: 9092  # The port on your pod where TLS is terminated
