assets/infrastructure/manifests/cfk/basic/kafka-2-TLSRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: kafka-2
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
  hostnames:
  - "kafka-2.${BASE_EXT_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: kafka-2-internal
      port: 9092  # The port on your pod where TLS is terminated
