assets/infrastructure/manifests/cfk/basic/kafka-bootstrap-TLSRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: kafka-bootstrap
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: tls-passthrough
  hostnames:
  - "kafka.${BASE_EXT_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: kafka-bootstrap
      port: 9092  # The port on your pod where TLS is terminated
