assets/infrastructure/manifests/cfk/basic/schemaRegistry-TLSRoute-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: schemaregistry-local
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: tls-passthrough-local
  hostnames:
  - "schemaregistry.${BASE_LOCAL_TLS_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: schemaregistry-0-internal
      port: 8081  # The port on your pod where TLS is terminated
