assets/infrastructure/manifests/cfk/basic/schemaRegistry-TLSRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: schemaregistry
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: tls-passthrough
  hostnames:
  - "schemaregistry.${BASE_EXT_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: schemaregistry-0-internal
      port: 8081  # The port on your pod where TLS is terminated
